# codex_minimal_outrigger_cli

./: .gitignore  AGENTS.md  INDEX.md  README.md  codex_minimal_outrigger_cli.code-workspace  pyproject.toml  test.sh
.cmoc/: config.json
.codex/: config.toml
memo/: cmoc_managed_ollama.md  gpt-5.6_migration.md  oracle_file_maintenance_strategry.md  prompting_best_practice.md  self_development.md  todo.md
oracle/: INDEX.md
oracle/doc/: INDEX.md  branch_model.md
oracle/script/: INDEX.md  install_ollama.sh
oracle/src/: INDEX.md
oracles/: INDEX.md
oracles/app_specs/: INDEX.md  branch_model.md  codex_call.md  config_file.md  console_and_file_log.md  console_output.md  error_handling.md  indexing.md  misc_specs.md  usage.md
oracles/considered_alternatives/: INDEX.md  apply_behavior.md
oracles/dev_rules/: INDEX.md
oracles/docs/: INDEX.md  app_spec.md  branch_model.md  code_design.md  development_environment.md  path_model.md
oracles/schemas/: INDEX.md
script/: install_ollama_linux_manual.sh
src/: INDEX.md  cmoc_runtime.py  main.py  oracle.py
src/acp/: INDEX.md  __init__.py
src/basic/: INDEX.md  __init__.py  acp.py  path_model.py  standard.py  struct_doc.py
src/commons/: INDEX.md  __init__.py  cmoc_runtime.py  codex.py  command_runner.py  errors.py  git.py  indexing.py  path_model.py  process.py  progress.py  prompt_editor_input.py  repo.py  report_files.py  runtime_apply.py  runtime_cli.py  runtime_codex.py  runtime_codex_exec.py  runtime_codex_logging.py  runtime_codex_preflight.py  runtime_codex_profile.py  runtime_codex_tui.py  runtime_config.py  runtime_content.py  runtime_doctor.py  runtime_errors.py  runtime_git.py  runtime_logging.py  runtime_ollama.py  runtime_paths.py  runtime_preprocess_command.py  runtime_refactor.py  runtime_results.py  runtime_run.py  runtime_run_lifecycle.py  runtime_run_report.py  runtime_state.py  subcommand_log.py  timestamps.py  timing.py
test/: INDEX.md  _acp_builder_support.py  _apply_support.py  _cli_support.py  _codex_support.py  _command_support.py  _git_support.py  _ollama_support.py  _profiles.py  _support.py  test_acp_builder_apply_parameters.py  test_acp_builder_editing_run_parameters.py  test_acp_builder_indexing_parameters.py  test_acp_builder_oracle_review_parameters.py  test_acp_builder_parameters.py  test_acp_builder_review_oracle_parameters.py  test_acp_builder_session_join_parameters.py  test_acp_builder_tui_parameters.py  test_apply_abandon_cli.py  test_apply_fork_cli.py  test_apply_fork_report_cli.py  test_apply_fork_target_normalization.py  test_apply_join_cli.py  test_basic_and_cli.py  test_basic_runtime.py  test_cli_command_tree.py  test_cli_init_tui.py  test_cli_oracle_edit.py  test_cli_tui.py  test_codex_runtime_errors.py  test_codex_runtime_exec.py  test_codex_runtime_exec_post_validation_forbidden.py  test_codex_runtime_exec_post_validation_runtime.py  test_codex_runtime_home.py  test_codex_runtime_paths.py  test_codex_runtime_quota_retry.py  test_codex_runtime_retry.py  test_codex_runtime_subprocess.py  test_codex_runtime_tui.py  test_development_validation_config.py  (+33 more)
tests/: INDEX.md  conftest.py  test_codex.py  test_file_naming.py  test_indexing.py  test_oracles_standards.py  test_realization_standards.py  test_repo.py  test_report_files.py  test_subcommands.py  test_timestamps.py
(+494 files in other folders)
