[project]
name = "codex-minimal-outrigger-cli"
version = "0.1.0"
description = "Thin workflow wrapper around Codex CLI."
requires-python = ">=3.12.3"
dependencies = [
    "pytest>=8.0.0",
    "typer>=0.12.0",
]

[project.scripts]
cmoc = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sub_commands = ["eval-oracles.py"]
