[project]
name = "codex-minimal-outrigger-cli"
version = "0.1.0"
description = "Thin workflow wrapper around Codex CLI."
requires-python = ">=3.12.3"
dependencies = [
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.0",
]

[project.scripts]
cmoc = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src", "oracle" = "oracle/src/oracle"}
py-modules = ["main", "cmoc_runtime"]

[tool.setuptools.packages.find]
where = ["src", "oracle/src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "oracle/src"]
timeout = 180
timeout_method = "signal"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer declares CLI options through evaluated defaults by design.
extend-immutable-calls = ["typer.Option"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
files = ["src", "oracle/src", "test"]
mypy_path = ["src", "oracle/src", "test"]
explicit_package_bases = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
