[project]
name = "codex-minimal-outrigger-cli"
version = "0.1.0"
description = "Thin workflow wrapper around Codex CLI."
requires-python = ">=3.12.3"
dependencies = [
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "pytest>=8.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.0",
    "types-jsonschema>=4.0.0",
]

[project.scripts]
cmoc = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src", "oracle" = "oracle/src/oracle"}
py-modules = ["main", "cmoc_runtime"]

[tool.setuptools.packages.find]
where = ["src", "oracle/src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "oracle/src"]
timeout = 120
markers = [
    "gpu_integration: requires GPU-only inference with test-local Ollama",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src", "oracle/src"]
explicit_package_bases = true
